fixed overlapping

--- a/code/Index.css
+++ b/code/Index.css
@@ -1,10 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(https://fonts.googleapis.com/css?family=Bree+Serif);
 
-div.Title{
+header{
     box-sizing: border-box;
     padding: 5px;
-    margin: 0 auto;
+    margin-top: 2%;
+    margin-bottom: 4.5%;
 }
 
 h1.Header {
